--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+datasource.hostname=localhost
+spring.datasource.url=jdbc:mysql://${datasource.hostname}/registerusres?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
+age=18
